# ngspice

./: owner_patch.patch
src/spicelib/devices/adms/ekv/: .adms.implicit.xml  .ekv.va.adms  Makefile.am  ekv.c  ekv.hxx  ekvacld.c  ekvask.c  ekvdefs.h  ekvdel.c  ekvdest.c  ekvext.h  ekvguesstopology.c  ekvinit.c  ekvinit.h  ekvitf.h  ekvload.c  ekvmask.c  ekvmdel.c  ekvmpar.c  ekvnoise.c  ekvpar.c  ekvpzld.c  ekvsetup.c  ekvtemp.c  ekvtrunc.c
src/spicelib/devices/adms/hicum0/: .hicum0.va.adms  Makefile.am  hicum0.c  hicum0.hxx  hicum0acld.c  hicum0ask.c  hicum0defs.h  hicum0del.c  hicum0dest.c  hicum0ext.h  hicum0guesstopology.c  hicum0init.c  hicum0init.h  hicum0itf.h  hicum0load.c  hicum0mask.c  hicum0mdel.c  hicum0mpar.c  hicum0noise.c  hicum0par.c  hicum0pzld.c  hicum0setup.c  hicum0temp.c  hicum0trunc.c
src/spicelib/devices/adms/hicum2/: .hicum2.va.adms  .interface.xml  Makefile.am  hicum2.c  hicum2.hxx  hicum2acld.c  hicum2ask.c  hicum2defs.h  hicum2del.c  hicum2dest.c  hicum2ext.h  hicum2guesstopology.c  hicum2init.c  hicum2init.h  hicum2itf.h  hicum2load.c  hicum2mask.c  hicum2mdel.c  hicum2mpar.c  hicum2noise.c  hicum2par.c  hicum2pzld.c  hicum2setup.c  hicum2temp.c  hicum2trunc.c
src/spicelib/devices/adms/mextram/: .bjt504t.va.adms  Makefile.am  bjt504t.c  bjt504t.hxx  bjt504tacld.c  bjt504task.c  bjt504tdefs.h  bjt504tdel.c  bjt504tdest.c  bjt504text.h  bjt504tguesstopology.c  bjt504tinit.c  bjt504tinit.h  bjt504titf.h  bjt504tload.c  bjt504tmask.c  bjt504tmdel.c  bjt504tmpar.c  bjt504tnoise.c  bjt504tpar.c  bjt504tpzld.c  bjt504tsetup.c  bjt504ttemp.c  bjt504ttrunc.c
src/spicelib/devices/adms/psp102/: .interface.xml  .psp102.va.adms  Makefile.am  psp102.c  psp102.hxx  psp102acld.c  psp102ask.c  psp102defs.h  psp102del.c  psp102dest.c  psp102ext.h  psp102guesstopology.c  psp102init.c  psp102init.h  psp102itf.h  psp102load.c  psp102mask.c  psp102mdel.c  psp102mpar.c  psp102noise.c  psp102par.c  psp102pzld.c  psp102setup.c  psp102temp.c  psp102trunc.c
src/spicelib/devices/cnt/: cntdefs.h  cntdefs.h.rej  cntload.c
